# oneshot_memorization

./: .gitignore  AGENTS.md  README.md  pyproject.toml
base/: __init__.py  bit_sequences.py  data_generator.py  estimators.py  fine_tune_unseen.py  minimal_model.py  model.py  train.py  train_distribution_classifier.py  training_utils.py
configs/base/: config.yaml
sample_configs/: bit_sequence_classifier.yaml  distribution_classifier.yaml  distribution_vector_autoencoder.yaml  distribution_vector_classifier.yaml  distribution_vector_label_regression.yaml  unseen_fine_tuning.yaml
scripts/: submit_slurm_array.sh
tests/: test_fine_tune_unseen.py  test_train_distribution_classifier.py  test_train_distribution_classifier_timing.py
utils/: generate_config_sweep.py  submit_fine_tune_slurm_array.py  submit_slurm_array.py  submit_slurm_jobs.py
workbooks/: analyze_distribution_vector_autoencoder.py  analyze_distribution_vector_label_regression.py  analyze_fine_tuning.py  analyze_slurm_array.py  bayes_optimal_distribution_classifier_loss.py  classification_helpers.py  code_check.py  dirichlet_pairwise_kl.py  eval.py  optimal_estimators.py  scratch.py  train_bit_sequence_classifier.py  train_distribution_label_classifier.py  train_model.py  train_model_helpers.py  train_next_bit_sequences.py
